fix: Standardize logging and timing with AppUtils integration
Replaced direct usage of LoggingService with the new AppUtils class for improved logging, error handling, and timing consistency. Updated code across multiple components, removing redundant timing logic and enhancing error messages throughout the application.